tests-build/tests/fail/macros_type_mismatch.stderr
error[E0308]: mismatched types
 --> tests/fail/macros_type_mismatch.rs:5:5
  |
5 |     Ok(())
  |     ^^^^^^ expected `()`, found `Result<(), _>`
  |
  = note: expected unit type `()`
                  found enum `Result<(), _>`

error[E0308]: mismatched types
  --> tests/fail/macros_type_mismatch.rs:10:12
   |
10 |     return Ok(());
   |            ^^^^^^ expected `()`, found `Result<(), _>`
   |
   = note: expected unit type `()`
                   found enum `Result<(), _>`

error[E0308]: mismatched types
  --> tests/fail/macros_type_mismatch.rs:14:46
   |
14 |   async fn extra_semicolon() -> Result<(), ()> {
   |  ______________________________________________^
15 | |     /* TODO(taiki-e): help message still wrong
16 | |     help: try using a variant of the expected enum
17 | |        |
...  |
23 | |     Ok(());
   | |           - help: remove this semicolon to return this value
24 | | }
   | |_^ expected `Result<(), ()>`, found `()`
   |
   = note:   expected enum `Result<(), ()>`
           found unit type `()`

error[E0308]: mismatched types
  --> tests/fail/macros_type_mismatch.rs:31:12
   |
30 | async fn issue_4635() -> () {
   |                          -- expected `()` because of return type
31 |     return 1;
   |            ^ expected `()`, found integer

error[E0308]: mismatched types
  --> tests/fail/macros_type_mismatch.rs:36:64
   |
36 |   async fn extra_semicolon_with_try_operator() -> Result<(), ()> {
   |  ________________________________________________________________^
37 | |     Ok(())?;
38 | |     Ok(());
   | |           - help: remove this semicolon to return this value
39 | | }
   | |_^ expected `Result<(), ()>`, found `()`
   |
   = note:   expected enum `Result<(), ()>`
           found unit type `()`
